fixed <div> and responsiveness issues

--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
 		</div>
 
 			<div class="project mdl-cell mdl-card mdl-shadow--4dp">
-				<img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
-			</div>
-			<div class="mdl-card__title">
-				<h2 class="mdl-card__title-text">Project Name</h2>
-			</div>
-			<div class="mdl-card__supporting-text">Project description text</div>
-			</div>
-
-			<div class="project mdl-cell mdl-card mdl-shadow--4dp">
-				<img src="http://lorempixel.com/350/260/abstract/placeholder-3" alt="project screenshot"/>
-			</div>
-			<div class="mdl-card__title">
-				<h2 class="mdl-card__title-text">Project Name</h2>
-			</div>
-			<div class="mdl-card__supporting-text">Project description text</div>
-			</div>
-
-			<div class="project mdl-cell mdl-card mdl-shadow--4dp">
-				<img src="http://lorempixel.com/350/260/abstract/placeholder-4" alt="project screenshot">
-			</div>
-			<div class="mdl-card__title">
-				<h2 class="mdl-card__title-text">Project Name</h2>
-			</div>
+				<div>
+					<img src="http://lorempixel.com/350/260/abstract/placeholder-2" alt="project screenshot"/>
+				</div>
+				<div class="mdl-card__title">
+					<h2 class="mdl-card__title-text">Project Name</h2>
+				</div>
 				<div class="mdl-card__supporting-text">Project description text</div>
 			</div>
+
+			<div class="project mdl-cell mdl-card mdl-shadow--4dp">
+				<div>
+					<img src="http://lorempixel.com/350/260/abstract/placeholder-3" alt="project screenshot"/>
+				</div>
+				<div class="mdl-card__title">
+					<h2 class="mdl-card__title-text">Project Name</h2>
+				</div>
+				<div class="mdl-card__supporting-text">Project description text</div>
+			</div>
+
+			<div class="project mdl-cell mdl-card mdl-shadow--4dp">
+				<div>
+					<img src="http://lorempixel.com/350/260/abstract/placeholder-4" alt="project screenshot">
+				</div>
+				<div class="mdl-card__title">
+					<h2 class="mdl-card__title-text">Project Name</h2>
+				</div>
+					<div class="mdl-card__supporting-text">Project description text</div>
+			</div>
+
 		</main>
 		<footer class="mdl-mini-footer">
 			<ul class="mdl-mini-footer__link-list">
